슬라이드추가

--- a/html/main/slide.html
+++ b/html/main/slide.html
@@ -17,9 +17,9 @@
                 <div id="content" role="main">컨텐츠 시작</div>
                 <footer id="footer"></footer>
             </div>
-            <div class="slide-box">
-                <div class="slide-area">
-                    <div class="slide-content"></div>
+            <div id="slide-box" class="slide_box">
+                <div id="slide-area" class="slide_area">
+                    <div id="slide-content" class="slide_content"></div>
                 </div>
             </div>
         </div>
