스와이퍼추가

--- a/html/main/main.html
+++ b/html/main/main.html
@@ -2,45 +2,16 @@
 <html lang="ko">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <meta charset="utf-8" />
-    <title>프로젝트타이틀</title>
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <meta property="og:title" content="" />
-    <meta property="og:url" content="" />
-    <meta property="og:image" content="" />
-    <meta property="og:description" content="" />
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-    <link href="../../css/common.css" type="text/css" rel="stylesheet" />
-
-    <script src="../../js/jquery.js"></script>
-
-
+    <!--#include virtual="../include/_head.html" -->
 </head>
 
 <body>
     <div id="wrap">
-        <!-- s: header include-->
-        <header id="header">
-            <ul class="skipnav">
-                <li>
-                    <a href="#content">컨텐츠 바11로가기</a>
-                </li>
-            </ul>
-            <div class="header-content">heade11r</div>
-        </header>
-        <!-- e: header include-->
-
+        <!--#include virtual="../include/_header.html" -->
         <div class="pageClassMain" id="container">
             <div id="content" role="main">컨텐츠 시작</div>
         </div>
-        <!-- s: footer include-->
-        <footer id="footer">
-            <div class="footer-content">footer</div>
-        </footer>
-        <!-- e: footer include-->
+        <!--#include virtual="../include/_footer.html" -->
     </div>
     <div class="dimm"></div>
 </body>
