color_flipper 추가

--- a/html/main/quest01_color_flipper.html
+++ b/html/main/quest01_color_flipper.html
@@ -34,12 +34,16 @@
         <!-- e: header include-->
 
         <div class="pageClassMain" id="container">
-            <div id="content" role="main">컨텐츠 </div>
-            <footer id="footer"></footer>
-        </div>
-        <div id="slide-box" class="slide_box">
-            <div id="slide-area" class="slide_area on_slide">
-                <div id="slide-content" class="slide_content"></div>
+            <div id="content" role="main">
+                <section class="main_area">
+                    <div class="change_box" id="">
+                        <div class="txt_code">Background-Color : <span id="code"> </span></div>
+                        <div class="button_area">
+                            <button>클릭하세요.</button>
+                        </div>
+                    </div>
+
+                </section>
             </div>
         </div>
         <!-- s: footer include-->
@@ -51,6 +55,3 @@
 </body>
 
 </html>
-
-
-<script src="../../js/slide.js" defer></script>
