--- a/html/main/main_mobile.html
+++ b/html/main/main_mobile.html
@@ -16,6 +16,7 @@
     <link href="../../css/common.css" type="text/css" rel="stylesheet" />
 
     <script src="../../js/jquery.js"></script>
+    <script src="../../js/quest.js"></script>
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
