--- a/html/main/slide.html
+++ b/html/main/slide.html
@@ -16,6 +16,7 @@
     <link href="../../css/common.css" type="text/css" rel="stylesheet" />
 
     <script src="../../js/jquery.js"></script>
+    <script src="../../js/quest.js"></script>
 
 
 </head>
